// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

import "wfa/measurement/internal/reporting/v2/impression_qualification_filter.proto";

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;
option java_outer_classname = "ImpressionQualificationFiltersServiceProto";

// Internal service for management of ImpressionQualificationFilter entities.
service ImpressionQualificationFilters {
  rpc GetImpressionQualificationFilter(GetImpressionQualificationFilterRequest)
      returns (ImpressionQualificationFilter);

  rpc ListImpressionQualificationFilters(
      ListImpressionQualificationFiltersRequest)
      returns (ListImpressionQualificationFiltersResponse);
}

message GetImpressionQualificationFilterRequest {
  string external_impression_qualification_filter_id = 1;
}

message ListImpressionQualificationFiltersRequest {
  // The maximum number of results to return.
  //
  // If unspecified, at most 50 results will be returned. The maximum value is
  // 100; values above this will be coerced to the maximum value.
  int32 page_size = 1;
  ListImpressionQualificationFiltersPageToken page_token = 2;
}

message ListImpressionQualificationFiltersResponse {
  repeated ImpressionQualificationFilter impression_qualification_filters = 1;

  // Token for requesting subsequent pages.
  //
  // If not specified, there are no more results.
  ListImpressionQualificationFiltersPageToken next_page_token = 2;
}

message ListImpressionQualificationFiltersPageToken {
  message After {
    string external_impression_qualification_filter_id = 1;
  }
  After after = 1;
}
